atualizado links das imagens e scrips3

--- a/index.html
+++ b/index.html
@@ -720,13 +720,13 @@
                 <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
                   Manter o Brasil conectado é a <br class="md-hide" />
                   coisa mais importante para gente.<br class="md-hide" />
-                  Por isso aquele destino<br class="md-hide" />
+                  Por isso, aquele destino<br class="md-hide" />
                   imperdível que você quer visitar não vai ficar para depois.<br /><br />
 
                   A Serra Gaúcha abre suas<br class="md-hide" />
                   portas com conforto e segurança <br class="md-hide" />
                   necessários para promover<br class="md-hide" />
-                  seu bem-estar neste momento.<br class="md-hide" />
+                  seu bem-estar nesse momento.<br class="md-hide" />
                   E os pacotes?<br /><br />
 
                   Continuam a sua cara,<br class="md-hide" />
@@ -844,7 +844,7 @@
                     <span class="bold color-0d1e3d font-25-20 line-height-1">
                       Baixe o app <br class="md-hide" />
                       Gramado <br class="md-hide" />
-                      Inesquecível<br /><br />
+                      Inesquecível.<br /><br />
 
                       Viva a magia<br class="md-hide" />
                       do Natal Luz.<br /><br />
@@ -1033,7 +1033,7 @@
                     <strong>&nbsp;&nbsp;+ Pacotes de Viagens</strong>
                   </div>
                   <div class="lighter font-50-40 color-0d1e3d bck-cbe9fb padding-0-8">
-                    &nbsp;&nbsp;Hoteis
+                    &nbsp;&nbsp;Hotéis
                   </div>
                   <div class="normal font-35-30 color-53b7f2 padding-0-8">
                     &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
