--- a/index.html
+++ b/index.html
@@ -605,9 +605,9 @@
       <div class="kv min-height-800 md-min-height-500"></div>
       <script>
         function changeDestiny(obj) {
-          $('.RJ, .Bonito, .Serra, .Fortaleza, .Salvador').removeClass('d-flex2')
-          $('#RJ, #Bonito, #Serra, #Fortaleza, #Salvador').removeClass('active')
-          $('.RJ, .Bonito, .Serra, .Fortaleza, .Salvador').addClass('d-none')
+          $('.Foz, .Maceio, .Natal, .PortoGalinhas, .PortoSeguro, .Serra').removeClass('d-flex2')
+          $('#Foz, #Maceio, #Natal, #PortoGalinhas, #PortoSeguro, #Serra').removeClass('active')
+          $('.Foz, .Maceio, .Natal, .PortoGalinhas, .PortoSeguro, .Serra').addClass('d-none')
           $('.' + obj.id).removeClass('d-none')
           $('.' + obj.id).addClass('d-flex2')
           $('#' + obj.id).addClass('active')
@@ -618,20 +618,23 @@
           <div class="row d-flex justify-content-center align-items-center ">
             <div
               class="col-xs-12 col-md-10 d-flex justify-content-between padding0 align-items-center min-height-81 menuHorizontal linkMenu">
-              <div id="RJ" onclick="changeDestiny(this)" class="div-link">
-                Rio de Janeiro
+              <div id="Foz" onclick="changeDestiny(this)" class="div-link">
+                Foz do Iguaçu
               </div>
-              <div id="Bonito" onclick="changeDestiny(this)" class="div-link">
-                Bonito
+              <div id="Maceio" onclick="changeDestiny(this)" class="div-link">
+                Maceió
+              </div>
+              <div id="Natal" onclick="changeDestiny(this)" class="div-link">
+                Natal
+              </div>
+              <div id="PortoGalinhas" onclick="changeDestiny(this)" class="div-link">
+                Porto de Galinhas
+              </div>
+              <div id="PortoSeguro" onclick="changeDestiny(this)" class="div-link">
+                Porto Seguro
               </div>
               <div id="Serra" class="active" onclick="changeDestiny(this)" class="div-link">
                 Serra Gaúcha
-              </div>
-              <div id="Fortaleza" onclick="changeDestiny(this)" class="div-link">
-                Fortaleza
-              </div>
-              <div id="Salvador" onclick="changeDestiny(this)" class="div-link">
-                Salvador
               </div>
             </div>
           </div>
@@ -645,10 +648,134 @@
 
 
             <div
-              class="RJ d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
+              class="Foz d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
               <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
                 <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
-                  Rio de Janeiro
+                  Foz do Iguaçu
+                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
+                    Em Construção
+                  </div>
+                </div>
+                <div class="spacer-40">&nbsp;</div>
+                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
+                  XXXX XXXX XXX <br class="md-hide" />
+                  coisa mais importante para gente.<br class="md-hide" />
+                  Por isso aquele destino<br class="md-hide" />
+                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
+
+                  A Serra Gaúcha abre suas<br class="md-hide" />
+                  portas com conforto e segurança <br class="md-hide" />
+                  necessários para promover<br class="md-hide" />
+                  seu bem-estar neste momento.<br class="md-hide" />
+                  E os pacotes?<br /><br />
+
+                  Continuam a sua cara,<br class="md-hide" />
+                  só que ainda mais acessíveis!<br class="md-hide" />
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
+                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+              </div>
+            </div>
+
+            <div
+              class="Maceio d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
+              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
+                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
+                  Maceió
+                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
+                    Em Construção
+                  </div>
+                </div>
+                <div class="spacer-40">&nbsp;</div>
+                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
+                  XXXX XXXX XXX <br class="md-hide" />
+                  coisa mais importante para gente.<br class="md-hide" />
+                  Por isso aquele destino<br class="md-hide" />
+                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
+
+                  A Serra Gaúcha abre suas<br class="md-hide" />
+                  portas com conforto e segurança <br class="md-hide" />
+                  necessários para promover<br class="md-hide" />
+                  seu bem-estar neste momento.<br class="md-hide" />
+                  E os pacotes?<br /><br />
+
+                  Continuam a sua cara,<br class="md-hide" />
+                  só que ainda mais acessíveis!<br class="md-hide" />
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
+                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+              </div>
+            </div>
+
+            <div
+              class="Natal d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
+              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
+                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
+                  Natal
+                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
+                    Em Construção
+                  </div>
+                </div>
+                <div class="spacer-40">&nbsp;</div>
+                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
+                  XXXX XXXX XXX <br class="md-hide" />
+                  coisa mais importante para gente.<br class="md-hide" />
+                  Por isso aquele destino<br class="md-hide" />
+                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
+
+                  A Serra Gaúcha abre suas<br class="md-hide" />
+                  portas com conforto e segurança <br class="md-hide" />
+                  necessários para promover<br class="md-hide" />
+                  seu bem-estar neste momento.<br class="md-hide" />
+                  E os pacotes?<br /><br />
+
+                  Continuam a sua cara,<br class="md-hide" />
+                  só que ainda mais acessíveis!<br class="md-hide" />
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
+                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+              </div>
+            </div>
+
+            <div
+              class="PortoGalinhas d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
+              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
+                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
+                  Porto de Galinhas
+                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
+                    Em Construção
+                  </div>
+                </div>
+                <div class="spacer-40">&nbsp;</div>
+                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
+                  XXXX XXXX XXX <br class="md-hide" />
+                  coisa mais importante para gente.<br class="md-hide" />
+                  Por isso aquele destino<br class="md-hide" />
+                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
+
+                  A Serra Gaúcha abre suas<br class="md-hide" />
+                  portas com conforto e segurança <br class="md-hide" />
+                  necessários para promover<br class="md-hide" />
+                  seu bem-estar neste momento.<br class="md-hide" />
+                  E os pacotes?<br /><br />
+
+                  Continuam a sua cara,<br class="md-hide" />
+                  só que ainda mais acessíveis!<br class="md-hide" />
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
+                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+              </div>
+            </div>
+
+            <div
+              class="PortoSeguro d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
+              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
+                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
+                  Porto Seguro
                   <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
                     Em Construção
                   </div>
@@ -677,37 +804,6 @@
 
 
             <div
-              class="Bonito d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
-              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
-                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
-                  Bonito
-                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
-                    Em Construção
-                  </div>
-                </div>
-                <div class="spacer-40">&nbsp;</div>
-                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
-                  XXXXXX XXX XXXXXX XXX XXX <br class="md-hide" />
-                  coisa mais importante para gente.<br class="md-hide" />
-                  Por isso aquele destino<br class="md-hide" />
-                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
-
-                  A Serra Gaúcha abre suas<br class="md-hide" />
-                  portas com conforto e segurança <br class="md-hide" />
-                  necessários para promover<br class="md-hide" />
-                  seu bem-estar neste momento.<br class="md-hide" />
-                  E os pacotes?<br /><br />
-
-                  Continuam a sua cara,<br class="md-hide" />
-                  só que ainda mais acessíveis!<br class="md-hide" />
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
-              </div>
-            </div>
-
-            <div
               class="Serra d-flex2 col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
               <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
                 <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
@@ -727,71 +823,6 @@
                   portas com conforto e segurança <br class="md-hide" />
                   necessários para promover<br class="md-hide" />
                   seu bem-estar nesse momento.<br class="md-hide" />
-                  E os pacotes?<br /><br />
-
-                  Continuam a sua cara,<br class="md-hide" />
-                  só que ainda mais acessíveis!<br class="md-hide" />
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
-              </div>
-            </div>
-
-
-            <div
-              class="Fortaleza d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
-              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
-                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
-                  Fortaleza
-                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
-                    Em Construção
-                  </div>
-                </div>
-                <div class="spacer-40">&nbsp;</div>
-                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
-                  XXXXX XXXX XXX XXXXX XX <br class="md-hide" />
-                  coisa mais importante para gente.<br class="md-hide" />
-                  Por isso aquele destino<br class="md-hide" />
-                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
-
-                  A Serra Gaúcha abre suas<br class="md-hide" />
-                  portas com conforto e segurança <br class="md-hide" />
-                  necessários para promover<br class="md-hide" />
-                  seu bem-estar neste momento.<br class="md-hide" />
-                  E os pacotes?<br /><br />
-
-                  Continuam a sua cara,<br class="md-hide" />
-                  só que ainda mais acessíveis!<br class="md-hide" />
-                </div>
-              </div>
-              <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
-              </div>
-            </div>
-
-
-
-            <div
-              class="Salvador d-none col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
-              <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
-                <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
-                  Salvador
-                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
-                    Em Construção
-                  </div>
-                </div>
-                <div class="spacer-40">&nbsp;</div>
-                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
-                  XXX XXXXXXX XXX XXXXXX XX XXXX <br class="md-hide" />
-                  coisa mais importante para gente.<br class="md-hide" />
-                  Por isso aquele destino<br class="md-hide" />
-                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
-
-                  A Serra Gaúcha abre suas<br class="md-hide" />
-                  portas com conforto e segurança <br class="md-hide" />
-                  necessários para promover<br class="md-hide" />
-                  seu bem-estar neste momento.<br class="md-hide" />
                   E os pacotes?<br /><br />
 
                   Continuam a sua cara,<br class="md-hide" />
@@ -877,7 +908,7 @@
                 <div class="spacer-50"></div>
                 <div class="col-md-12 padding0 d-flex flex-column-row justify-content-center">
                   <div
-                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 md-padding-left-20 margin-15-0 md-max-width-450  d-flex flex-column justify-content-center align-items-center   mb-padding-0">
+                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 md-padding-left-20 margin-15-0 md-max-width-450  d-flex flex-column justify-content-center align-items-center   mb-padding-0 mb-padding-0-20">
                     <div class="healthFirstIco">
                       <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco1.png"
                         alt="">
@@ -891,7 +922,7 @@
                     </div>
                   </div>
                   <div
-                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0">
+                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
                     <div class="healthFirstIco">
                       <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco2.png"
                         alt="">
@@ -902,7 +933,7 @@
                     </div>
                   </div>
                   <div
-                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0">
+                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
                     <div class="healthFirstIco">
                       <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco3.png"
                         alt="">
@@ -929,6 +960,12 @@
       </div>
 
       <style>
+        @media screen and(max-width: 575px) {
+          .mb-padding-0-20 {
+            padding: 0px 20px;
+          }
+        }
+
         @media (min-width: 992px) {
           .lg-61-66 {
             width: 61.66% !important;
