--- a/index.html
+++ b/index.html
@@ -961,6 +961,18 @@
 
       <style>
         @media screen and(max-width: 575px) {
+          .font-50-40 {
+            font-size: 35px;
+          }
+
+          .font-40-35 {
+            font-size: 30px;
+          }
+
+          .font-35-30 {
+            font-size: 25px;
+          }
+
           .mb-padding-0-20 {
             padding: 0px 20px;
           }
