--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
           $('#' + obj.id).addClass('active')
         }
       </script>
-      <div class="barKV font-25-20">
+      <div class="barKV font-22-18">
         <div class="container">
           <div class="row d-flex justify-content-center align-items-center ">
             <div
@@ -960,7 +960,21 @@
       </div>
 
       <style>
+        .font-22-18 {
+          font-size: 22px;
+        }
+
+        @media screen and(max-width: 768px) {
+          .font-22-18 {
+            font-size: 18px;
+          }
+        }
+
         @media screen and(max-width: 575px) {
+          .font-22-18 {
+            font-size: 18x;
+          }
+
           .font-50-40 {
             font-size: 35px;
           }
