atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -964,6 +964,15 @@
           font-size: 22px;
         }
 
+        .active:before {
+          position: absolute;
+          bottom: 0px;
+          right: 50;
+          color: #fff;
+          content: "\e007";
+          font-family: Icon_set_AV;
+        }
+
         @media screen and(max-width: 768px) {
           .font-22-18 {
             font-size: 18px;
