atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -964,10 +964,14 @@
           font-size: 22px;
         }
 
+        .menuHorizontal>div {
+          position: relative;
+        }
+
         .active:before {
           position: absolute;
-          bottom: 0px;
-          right: 50;
+          bottom: -25px;
+          right: 50%;
           color: #fff;
           content: "\e007";
           font-family: Icon_set_AV;
