atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -1304,6 +1304,11 @@
 
           </div>
 
+          <script>
+            console.info('ready')
+            $('link[rel=stylesheet]')[4].disabled = true
+            $('link[rel=stylesheet]')[3].disabled = true
+          </script>
 
           <div class="footer-col col-xs-12 col-sm-6 col-md-4 hidden">
 
