atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                     </div>
                   </div>
                   <div
-                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
+                    class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20 lg-padding-right-0">
                     <div class="healthFirstIco">
                       <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco3.png"
                         alt="">
@@ -970,21 +970,21 @@
           }
         }
 
-        @media screen and(max-width: 575px) {
+        @media screen and (max-width: 575px) {
           .font-22-18 {
-            font-size: 18x;
+            font-size: 16x;
           }
 
           .font-50-40 {
-            font-size: 35px;
-          }
-
-          .font-40-35 {
             font-size: 30px;
           }
 
-          .font-35-30 {
+          .font-40-35 {
             font-size: 25px;
+          }
+
+          .font-35-30 {
+            font-size: 20px;
           }
 
           .mb-padding-0-20 {
@@ -993,6 +993,10 @@
         }
 
         @media (min-width: 992px) {
+          .lg-padding-right-0 {
+            padding-right: 0px;
+          }
+
           .menuHorizontal>div {
             position: relative;
           }
