atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -807,30 +807,40 @@
               class="Serra d-flex2 col-md-12 margin-left-8-5-per margin-left-0 ListDestin justify-content-center align-items-center md-flex-direction-column-reverse">
               <div class="col-xs-12 col-sm-7 col-lg-6 padding0_important">
                 <div class="ListDestinTitle bold color-0d1e3d font-50-40 line-height-1-2 md-margin-top-20">
-                  Serra Gaúcha
-                  <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
-                    Rio Grande do Sul
-                  </div>
+                  <a
+                    href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
+                    Serra Gaúcha
+                    <div class="ListDestinSubtitle lighter color-0d1e3d font-25-20">
+                      Rio Grande do Sul
+                    </div>
+                  </a>
                 </div>
                 <div class="spacer-40">&nbsp;</div>
-                <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
-                  Manter o Brasil conectado é a <br class="md-hide" />
-                  coisa mais importante para gente.<br class="md-hide" />
-                  Por isso, aquele destino<br class="md-hide" />
-                  imperdível que você quer visitar não vai ficar para depois.<br /><br />
+                <a
+                  href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
+                  <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
+                    Manter o Brasil conectado é a <br class="md-hide" />
+                    coisa mais importante para gente.<br class="md-hide" />
+                    Por isso, aquele destino<br class="md-hide" />
+                    imperdível que você quer visitar não vai ficar para depois.<br /><br />
 
-                  A Serra Gaúcha abre suas<br class="md-hide" />
-                  portas com conforto e segurança <br class="md-hide" />
-                  necessários para promover<br class="md-hide" />
-                  seu bem-estar nesse momento.<br class="md-hide" />
-                  E os pacotes?<br /><br />
+                    A Serra Gaúcha abre suas<br class="md-hide" />
+                    portas com conforto e segurança <br class="md-hide" />
+                    necessários para promover<br class="md-hide" />
+                    seu bem-estar nesse momento.<br class="md-hide" />
+                    E os pacotes?<br /><br />
 
-                  Continuam a sua cara,<br class="md-hide" />
-                  só que ainda mais acessíveis!<br class="md-hide" />
-                </div>
+                    Continuam a sua cara,<br class="md-hide" />
+                    só que ainda mais acessíveis!<br class="md-hide" />
+                  </div>
+                </a>
               </div>
+
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                <a
+                  href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
+                  <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                </a>
               </div>
             </div>
 
@@ -854,32 +864,40 @@
                 </div>
                 <div class="col-xs-12 col-md-4 padding0">
                   <div
-                    class="max-width-280 md-max-width-100-per padding-ld-30 min-height-800 md-min-height-500 mb-min-height-300 padding-top-100 padding-top-50 bck-fff md-boxOpacity">
-                    <span class="bold color-53b7f2 font-25-20 line-height-1">
-                      Reserve com <br class="md-hide" />
-                      antecedência<br />
-                    </span>
+                    class="max-width-280 md-max-width-100-per padding-ld-30 min-height-800 md-min-height-500 mb-min-height-350 padding-top-100 padding-top-50 bck-fff md-boxOpacity">
+                    <a href="https://www.azulviagens.com.br/hotels/">
+                      <span class="bold color-53b7f2 font-25-20 line-height-1">
+                        Reserve com <br class="md-hide" />
+                        antecedência<br />
+                      </span>
+                    </a>
                     <span class="d-block padding-bottom-5"></span>
-                    <span class="normal color-6d6e71 font-25-20">
-                      Por enquanto, <br class="md-hide" />
-                      hotéis,
-                      restaurantes, <br class="md-hide" />
-                      parques e outros <br class="md-hide" />
-                      atrativos estão <br class="md-hide" />
-                      abrindo <br class="md-hide" />
-                      parcialmente
-                      para a segurança<br class="md-hide" />
-                      de todos.<br /><br />
-                    </span>
+                    <a href="https://www.azulviagens.com.br/hotels/">
+                      <span class="normal color-6d6e71 font-20-18">
+                        Por enquanto, <br class="md-hide" />
+                        hotéis,
+                        restaurantes, <br class="md-hide" />
+                        parques e outros <br class="md-hide" />
+                        atrativos estão <br class="md-hide" />
+                        abrindo <br class="md-hide" />
+                        parcialmente
+                        para a segurança<br class="md-hide" />
+                        de todos.<br /><br />
+                      </span>
+                    </a>
+                    <a
+                      href="https://www.azulviagens.com.br/services/results.aspx?searchSessionID=1288647#?name=Natal&order=etiqueta">
+                      <span class="bold color-0d1e3d font-25-20 line-height-1">
+                        Viva a magia<br class="md-hide" />
+                        do Natal Luz.<br /><br />
+                      </span>
 
-                    <span class="bold color-0d1e3d font-25-20 line-height-1">
-                      Baixe o app <br class="md-hide" />
-                      Gramado <br class="md-hide" />
-                      Inesquecível.<br /><br />
+                      <span class="normal color-6d6e71 font-20-18">
+                        A 35ª edição chega com muitas novidades e adaptações ao cenário atual. <br />
+                        Este ano o evento começará em outubro e contará com 101 dias de atrações
+                      </span>
 
-                      Viva a magia<br class="md-hide" />
-                      do Natal Luz.<br /><br />
-                    </span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -1051,13 +1069,15 @@
                 <div class="color-53b7f2 d-flex  align-items-end line-height-1-2">
                   <span class="font-35-30 normal">
                     10X <span class="bold">R$&nbsp;</span>
-                  </span> <span class="font-70-50 bold line-height-1">000,00</span>
+                  </span> <span class="font-70-50 bold line-height-1">96,30</span>
                 </div>
                 <div class="20-18 color-6d6e71 normal line-height-1">ou por <span class="color-0d1e3d bold">R$
-                    0.000,00</span> à vista
+                    963,00</span> à vista
                 </div>
                 <div class="spacer-30"></div>
-                <div class="btnDefault">Saiba mais</div>
+                <a href="https://www.azulviagens.com.br/packages/results.aspx?searchSessionID=1286583&master=true">
+                  <div class="btnDefault div-link">Saiba mais</div>
+                </a>
               </div>
               <div class="DestinyDescription md-padding-40 md-width-100 md-position-inherit md-height-auto">
                 <div class="d-flex align-items-center">
@@ -1079,7 +1099,7 @@
                   <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/icoChef.png" alt=""
                     class="align-self-center padding10">
                   <div class="font-20-18 color-ffffff lighter line-height-1">
-                    All inclusive
+                    Café da manhã
                   </div>
                 </div>
               </div>
@@ -1109,18 +1129,26 @@
                   <div></div>
                 </div>
                 <div class="packageTravelDetails d-flex col-xs-12 col-md-9 flex-column padding0 mb-padding-ld-10 ">
-                  <div class="font-35-30 color-53b7f2 padding-0-8">
-                    <strong>&nbsp;&nbsp;+ Pacotes de Viagens</strong>
-                  </div>
-                  <div class="lighter font-50-40 color-0d1e3d bck-cbe9fb padding-0-8">
-                    &nbsp;&nbsp;Hotéis
-                  </div>
-                  <div class="normal font-35-30 color-53b7f2 padding-0-8">
-                    &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
-                  </div>
-                  <div class="lighter font-40-35 color-0d1e3d padding-0-8">
-                    &nbsp;&nbsp;Utilize Pontos Tudo<strong>Azul</strong>
-                  </div>
+                  <a href="https://www.azulviagens.com.br/packages/flightHotel/?packageID=1">
+                    <div class="font-35-30 color-53b7f2 padding-0-8">
+                      <strong>&nbsp;&nbsp;+ Pacotes de Viagens</strong>
+                    </div>
+                  </a>
+                  <a href="https://www.azulviagens.com.br/hotels/">
+                    <div class="lighter font-50-40 color-0d1e3d bck-cbe9fb padding-0-8">
+                      &nbsp;&nbsp;Hotéis
+                    </div>
+                  </a>
+                  <a href="https://www.azulviagens.com.br/">
+                    <div class="normal font-35-30 color-53b7f2 padding-0-8">
+                      &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
+                    </div>
+                  </a>
+                  <a href="https://tudoazul.voeazul.com.br/web/azul/home">
+                    <div class="lighter font-40-35 color-0d1e3d padding-0-8">
+                      &nbsp;&nbsp;Utilize Pontos Tudo<strong>Azul</strong>
+                    </div>
+                  </a>
                 </div>
               </div>
               <div class="col-xs-12 col-md-4 padding0 padding-rg-18-md0">
@@ -1156,6 +1184,32 @@
           </div>
         </div>
 
+      </div>
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12" style="text-align:justify">
+            Regras:
+            *Os valores publicados são válidos por pessoa, com hospedagem em apartamento duplo em caso de voos
+            domésticos, para voos da AZUL partindo de Goiânia/GYN, Londrina/LDB e Recife/REC, com eventual conexão.
+            Condições válidas para viagens nacionais de ida e volta iniciadas a partir de 01/10/2020 e completadas até
+            15/11/2020. Consulte também pacotes para demais datas de viagem, quantidade de noites e outros destinos. Os
+            pacotes incluem passagens aéreas, cujos valores estão sujeitos à disponibilidade de assentos e às regras e
+            restrições tarifárias específicas, estadias em hotéis nas classes e categorias especificadas. Parcelamento
+            válido para compras com cartões de crédito Visa, MasterCard, HiperCard e American Express considerando
+            exclusivamente o valor da tarifa anunciada, não incluídos taxa de embarque aéreo e adicional de emissão.
+            Valores, datas e condições de pagamento estão sujeitos a reajustes sem aviso prévio. Os pacotes de viagens
+            conjugados com passagens aéreas são pessoais, intransferíveis e os seus valores estão sujeitos à
+            disponibilidade de assentos e às regras e restrições tarifárias específicas. Em caso de cancelamento ou
+            alteração do pacote de viagem originalmente contratado serão aplicadas as penalidades descritas nos termos e
+            condições de prestação de serviços disponibilizado em http://www.azulviagens.com.br/termos-e-condicoes.
+            Consulte a central de atendimento da Azul Viagens (4003-1181), o website www.azulviagens.com.br ou seu
+            Agente de viagens para obter maiores informações sobre os termos e condições da contratação e as
+            regras/restrições específicas das tarifas anunciadas, alteração de datas, reembolso, remarcação,
+            cancelamento, vigência da viagem e desconto para crianças. As imagens são meramente ilustrativas.
+          </div>
+        </div>
       </div>
 
 
