atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-12" style="text-align:justify">
+          <div class="col-md-12 md-padding-20" style="text-align:justify">
             Regras:
             *Os valores publicados são válidos por pessoa, com hospedagem em apartamento duplo em caso de voos
             domésticos, para voos da AZUL partindo de Goiânia/GYN, Londrina/LDB e Recife/REC, com eventual conexão.
