atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 
   <link href="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/css/main.css" rel="stylesheet" type="text/css">
 
-  <link
-    href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/css/style_inPage.css"
-    rel="stylesheet" type="text/css">
+  <link href="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/css/style_inPage.css" rel="stylesheet"
+    type="text/css">
 
   <!-- Browser specific overrides, after all other CSS files-->
   <!--[if lte IE 8]>
