atualizando css para QA

--- a/index.html
+++ b/index.html
@@ -618,19 +618,19 @@
           <div class="row d-flex justify-content-center align-items-center ">
             <div
               class="col-xs-12 col-md-10 d-flex justify-content-between padding0 align-items-center min-height-81 menuHorizontal linkMenu">
-              <div id="Foz" onclick="changeDestiny(this)" class="div-link">
+              <div id="Foz" onclick="changeDestinyD(this)" class="div-link">
                 Foz do Iguaçu
               </div>
-              <div id="Maceio" onclick="changeDestiny(this)" class="div-link">
+              <div id="Maceio" onclick="changeDestinyD(this)" class="div-link">
                 Maceió
               </div>
-              <div id="Natal" onclick="changeDestiny(this)" class="div-link">
+              <div id="Natal" onclick="changeDestinyD(this)" class="div-link">
                 Natal
               </div>
-              <div id="PortoGalinhas" onclick="changeDestiny(this)" class="div-link">
+              <div id="PortoGalinhas" onclick="changeDestinyD(this)" class="div-link">
                 Porto de Galinhas
               </div>
-              <div id="PortoSeguro" onclick="changeDestiny(this)" class="div-link">
+              <div id="PortoSeguro" onclick="changeDestinyD(this)" class="div-link">
                 Porto Seguro
               </div>
               <div id="Serra" class="active" onclick="changeDestiny(this)" class="div-link">
@@ -967,7 +967,8 @@
               </div>
 
               <div class="col-md-12 padding0 d-flex justify-content-center align-items-center mb-padding-ld-10">
-                <iframe width="1020" height="572" src="https://www.youtube.com/embed/4qeIpEj6s9g" frameborder="0"
+                <iframe width="1020" style="max-width: 100%" height="572"
+                  src="https://www.youtube.com/embed/4qeIpEj6s9g" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
               </div>
