--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
                     <a href="https://www.azulviagens.com.br/hotels/">
                       <span class="bold color-53b7f2 font-25-20 line-height-1">
                         Reserve com <br class="md-hide" />
-                        antecedência<br />
+                        antecedência<br /><br />
                       </span>
                     </a>
                     <span class="d-block padding-bottom-5"></span>
@@ -967,7 +967,7 @@
               </div>
 
               <div class="col-md-12 padding0 d-flex justify-content-center align-items-center mb-padding-ld-10">
-                <iframe width="1020" style="max-width: 100%" height="572"
+                <iframe width="1020" class="mb-max-height-330" style="max-width: 100%" height="572"
                   src="https://www.youtube.com/embed/4qeIpEj6s9g" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
@@ -1015,6 +1015,10 @@
         }
 
         @media screen and (max-width: 575px) {
+          .mb-max-height-330 {
+            max-height: 330px;
+          }
+
           .font-22-18 {
             font-size: 16x;
           }
