atualizando css com o QA

--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
 
 
 
-  <link href="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/css/main.css" rel="stylesheet" type="text/css">
+  <link href="https://tudoazul.voeazul.com.br/documents/26002/763575/main.css" rel="stylesheet" type="text/css">
 
-  <link href="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/css/style_inPage.css" rel="stylesheet"
-    type="text/css">
+  <link
+    href="https://tudoazul.voeazul.com.br/documents/26002/763575/style_inPage.css/9be1981e-6e89-45f8-80d7-cab07bd88a38"
+    rel="stylesheet" type="text/css">
 
   <!-- Browser specific overrides, after all other CSS files-->
   <!--[if lte IE 8]>
@@ -674,7 +675,7 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/mapGaucha.png" alt="">
               </div>
             </div>
 
@@ -705,7 +706,7 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/mapGaucha.png" alt="">
               </div>
             </div>
 
@@ -736,7 +737,7 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/mapGaucha.png" alt="">
               </div>
             </div>
 
@@ -767,7 +768,7 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/mapGaucha.png" alt="">
               </div>
             </div>
 
@@ -798,7 +799,7 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/mapGaucha.png" alt="">
               </div>
             </div>
 
@@ -839,7 +840,7 @@
               <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
                 <a
                   href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
-                  <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/mapGaucha.png" alt="">
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/mapGaucha.png" alt="">
                 </a>
               </div>
             </div>
@@ -886,7 +887,7 @@
                       </span>
                     </a>
                     <a
-                      href="https://www.azulviagens.com.br/services/results.aspx?searchSessionID=1288647#?name=Natal&order=etiqueta">
+                      href="https://www.azulviagens.com.br/services/results.aspx?destinationID=743&paxs=20&endDate=2021-01-30&accion=searchservices&startDate=2020-10-22#?name=Natal">
                       <span class="bold color-0d1e3d font-25-20 line-height-1">
                         Viva a magia<br class="md-hide" />
                         do Natal Luz.<br /><br />
@@ -928,8 +929,7 @@
                   <div
                     class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 md-padding-left-20 margin-15-0 md-max-width-450  d-flex flex-column justify-content-center align-items-center   mb-padding-0 mb-padding-0-20">
                     <div class="healthFirstIco">
-                      <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco1.png"
-                        alt="">
+                      <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/HealthFirstIco1.png" alt="">
                     </div>
                     <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                       <span class="bold color-0d1e3d">Chegue com antecedência</span> aos locais que planeja visitar.
@@ -942,8 +942,7 @@
                   <div
                     class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
                     <div class="healthFirstIco">
-                      <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco2.png"
-                        alt="">
+                      <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/HealthFirstIco2.png" alt="">
                     </div>
                     <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                       <span class="bold color-0d1e3d">Higienize mãos, </span>unhas e evite andar
@@ -953,8 +952,7 @@
                   <div
                     class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-center align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20 lg-padding-right-0">
                     <div class="healthFirstIco">
-                      <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/HealthFirstIco3.png"
-                        alt="">
+                      <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/HealthFirstIco3.png" alt="">
                     </div>
                     <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                       <span class="bold color-0d1e3d">O uso de máscara é obrigatório. </span> E mesmo onde não for,
@@ -1084,8 +1082,8 @@
             <div class="position-relative">
               <div class="DestinyMark001 md-position-inherit md-width-100 md-margin-0 md-height-30"></div>
               <div class="DestinyImg001">
-                <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/DestinySerra.png" width="1020"
-                  alt="" class="align-self-center">
+                <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinySerra.png" width="1020" alt=""
+                  class="align-self-center">
               </div>
               <div
                 class="DestinyPrice md-padding-40 md-position-inherit d-flex flex-column lg-padding-left-60 lg-max-width-550">
@@ -1104,21 +1102,23 @@
                 <div class="20-18 color-6d6e71 normal line-height-1">ou por <span class="color-0d1e3d bold">R$
                     963,00</span> à vista
                 </div>
+
                 <div class="spacer-30"></div>
-                <a href="https://www.azulviagens.com.br/packages/results.aspx?searchSessionID=1286583&master=true">
+                <a
+                  href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
                   <div class="btnDefault div-link">Saiba mais</div>
                 </a>
               </div>
               <div class="DestinyDescription md-padding-40 md-width-100 md-position-inherit md-height-auto">
                 <div class="d-flex align-items-center">
-                  <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/icoHotel.png" alt=""
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/icoHotel.png" alt=""
                     class="align-self-center padding10">
                   <div class="font-20-18 color-ffffff lighter line-height-1">
                     Hotel
                   </div>
                 </div>
                 <div class="d-flex align-items-center">
-                  <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/icoAirPlane.png" alt=""
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/icoAirPlane.png" alt=""
                     class="align-self-center padding10">
                   <div class="font-20-18 color-ffffff lighter line-height-1">
                     Passagem<br />
@@ -1126,7 +1126,7 @@
                   </div>
                 </div>
                 <div class="d-flex align-items-center">
-                  <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/icoChef.png" alt=""
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/icoChef.png" alt=""
                     class="align-self-center padding10">
                   <div class="font-20-18 color-ffffff lighter line-height-1">
                     Café da manhã
@@ -1186,7 +1186,7 @@
               <div class="col-xs-12 col-md-4 padding0 padding-rg-18-md0">
                 <div class="packageTravelDestinyNav bck-0d1e3d justify-content-between d-flex flex-column">
                   <div class="font-25-20 color-ffffff normal text-left d-flex line-height-1">
-                    <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/arrowLeft.png"
+                    <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft.png"
                       class="align-self-center padding-rg-10" alt="">
                     <div>
                       <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
@@ -1204,7 +1204,7 @@
                       </a>
                     </div>
                     </a>
-                    <img src="https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/arrowRight.png"
+                    <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowRight.png"
                       class="align-self-center padding-lf-10" alt="">
                   </div>
                 </div>
