atualizando css com o QA

--- a/index.html
+++ b/index.html
@@ -868,14 +868,13 @@
                     class="max-width-280 md-max-width-100-per padding-ld-30 min-height-800 md-min-height-500 mb-min-height-350 padding-top-100 padding-top-50 bck-fff md-boxOpacity">
                     <a href="https://www.azulviagens.com.br/hotels/">
                       <span class="bold color-53b7f2 font-25-20 line-height-1">
-                        Reserve com <br class="md-hide" />
-                        antecedência<br /><br />
+                        Reserve com antecedência.<br /><br />
                       </span>
                     </a>
                     <span class="d-block padding-bottom-5"></span>
                     <a href="https://www.azulviagens.com.br/hotels/">
                       <span class="normal color-6d6e71 font-20-18">
-                        Por enquanto, <br class="md-hide" />
+                        Por enquanto,
                         hotéis,
                         restaurantes, <br class="md-hide" />
                         parques e outros <br class="md-hide" />
@@ -884,6 +883,15 @@
                         parcialmente
                         para a segurança<br class="md-hide" />
                         de todos.<br /><br />
+
+                        Por enquanto,
+                        hotéis,
+                        restaurantes,
+                        parques e outros
+                        atrativos estão
+                        abrindo suas portas parcialmente para a segurança de todos. Parques estão com capacidade de 50%
+                        de lotação e com distanciamento de 2m entre as pessoas. Restaurantes e lanchonetes estão
+                        funcionando, mas sem o sistema self-service e buffet.
                       </span>
                     </a>
                     <a
