atualizando css com o QA

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
               <div class="col-xs-12 col-md-10 padding0 d-flex flex-mb-column flex-row">
 
                 <div
-                  class="col-xs-12 col-md-8 padding0 padding-top-100 md-padding-top-50 md-padding-left-20 font-60-40 color-ffffff bold line-height-1 text-shadow-fff">
+                  class="col-xs-12 col-md-8 padding0 padding-top-50 md-padding-top-50 md-padding-left-20 font-60-40 color-ffffff bold line-height-1 text-shadow-fff">
                   Friozinho<br class="md-hide" />
                   na montanha<br class="md-hide" />
                   em grande<br class="md-hide" />
@@ -865,7 +865,7 @@
                 </div>
                 <div class="col-xs-12 col-md-4 padding0">
                   <div
-                    class="max-width-280 md-max-width-100-per padding-ld-30 min-height-800 md-min-height-500 mb-min-height-350 padding-top-100 padding-top-50 bck-fff md-boxOpacity">
+                    class="max-width-280 md-max-width-100-per padding-ld-30 min-height-800 md-min-height-500 mb-min-height-350 padding-top-50 padding-top-50 bck-fff md-boxOpacity">
                     <a href="https://www.azulviagens.com.br/hotels/">
                       <span class="bold color-53b7f2 font-25-20 line-height-1">
                         Reserve com antecedência.<br /><br />
@@ -882,7 +882,7 @@
                         atrativos estão
                         abrindo suas portas parcialmente para a segurança de todos. Parques estão com capacidade de 50%
                         de lotação e com distanciamento de 2m entre as pessoas. Restaurantes e lanchonetes estão
-                        funcionando, mas sem o sistema self-service e buffet.
+                        funcionando, mas sem o sistema self-service e buffet.<br /><br />
                       </span>
                     </a>
                     <a
@@ -977,6 +977,10 @@
       </div>
 
       <style>
+        .padding-top-50 {
+          padding-top: 50px;
+        }
+
         .font-22-18 {
           font-size: 22px;
         }
