--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
 
 
 
-  <link href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/css/main.css"
-    rel="stylesheet" type="text/css">
+  <link href="https://tudoazul.voeazul.com.br/documents/26002/763575/main.css" rel="stylesheet" type="text/css">
 
   <link
-    href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/css/style_inPage.css"
+    href="https://tudoazul.voeazul.com.br/documents/26002/763575/style_inPage.css/5ef359cf-40d0-437a-bd10-44bb3521801d"
     rel="stylesheet" type="text/css">
 
   <!-- Browser specific overrides, after all other CSS files-->
@@ -690,9 +689,7 @@
                 <div class="col-xs-12 col-sm-7 col-lg-8 padding0_important">
                   <a
                     href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
-                    <img
-                      src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinyFozGr.png"
-                      alt="">
+                    <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinyFozGr.png" alt="">
                   </a>
                 </div>
               </div>
@@ -777,9 +774,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 md-padding-left-20 margin-15-0 md-max-width-450  d-flex flex-column justify-content-start align-items-center   mb-padding-0 mb-padding-0-20">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoFoz1.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoFoz1.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Use máscara.</span> <br />
@@ -791,9 +786,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-start align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoFoz2.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoFoz2.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Veja se está tudo bem. </span><br />
@@ -806,9 +799,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-start align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20 lg-padding-right-0">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoFoz3.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoFoz3.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Baixe o app CovidPR.</span> <br />
@@ -947,9 +938,8 @@
               <div class="position-relative">
                 <div class="DestinyMark001 md-position-inherit md-width-100 md-margin-0 md-height-30"></div>
                 <div class="DestinyImg001">
-                  <img
-                    src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinyFozPq.png"
-                    width="1020" alt="" class="align-self-center">
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinyFozPq.png" width="1020" alt=""
+                    class="align-self-center">
                 </div>
                 <div
                   class="DestinyPrice md-padding-40 md-position-inherit d-flex flex-column lg-padding-left-60 lg-max-width-550">
@@ -1153,9 +1143,7 @@
                 <div class="col-xs-12 col-sm-12 col-lg-12 padding0_important">
                   <a
                     href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
-                    <img
-                      src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinyNatalGr.png"
-                      alt="">
+                    <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinyNatalGr.png" alt="">
                   </a>
                 </div>
 
@@ -1241,9 +1229,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 md-padding-left-20 margin-15-0 md-max-width-450  d-flex flex-column justify-content-start align-items-center   mb-padding-0 mb-padding-0-20">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoNatal1.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoNatal1.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Leve protetor solar. </span>
@@ -1257,9 +1243,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-start align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoNatal2.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoNatal2.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Preencha a declaração de saúde.</span>
@@ -1271,9 +1255,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-start align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20 lg-padding-right-0">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoNatal3.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoNatal3.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Mantenha a distância recomendada.
@@ -1414,9 +1396,8 @@
               <div class="position-relative">
                 <div class="DestinyMark001 md-position-inherit md-width-100 md-margin-0 md-height-30"></div>
                 <div class="DestinyImg001">
-                  <img
-                    src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinyNatalPq.png"
-                    width="1020" alt="" class="align-self-center">
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinyNatalPq.png" width="1020"
+                    alt="" class="align-self-center">
                 </div>
                 <div
                   class="DestinyPrice md-padding-40 md-position-inherit d-flex flex-column lg-padding-left-60 lg-max-width-550">
@@ -1621,9 +1602,7 @@
                 <div class="col-xs-12 col-sm-12 col-lg-12 padding0_important">
                   <a
                     href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
-                    <img
-                      src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinyPortoGalinhasGr.png"
-                      alt="">
+                    <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinyPortoGalinhasGr.png" alt="">
                   </a>
                 </div>
 
@@ -1706,9 +1685,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 md-padding-left-20 margin-15-0 md-max-width-450  d-flex flex-column justify-content-start align-items-center   mb-padding-0 mb-padding-0-20">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoPortoGalinhas1.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoPortoGalinhas1.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Reserve o hotel
@@ -1722,9 +1699,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-start align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoPortoGalinhas2.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoPortoGalinhas2.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Leve suas máscaras.</span>
@@ -1736,9 +1711,7 @@
                     <div
                       class="col-xs-12 col-md-4 padding-ld-40 padding-left-0 margin-15-0 md-max-width-450 d-flex flex-column justify-content-start align-items-center md-padding-left-20 mb-padding-0 mb-padding-0-20 lg-padding-right-0">
                       <div class="healthFirstIco">
-                        <img
-                          src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/IcoPortoGalinhas3.png"
-                          alt="">
+                        <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoPortoGalinhas3.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Respeite a etiqueta
@@ -1881,8 +1854,7 @@
               <div class="position-relative">
                 <div class="DestinyMark001 md-position-inherit md-width-100 md-margin-0 md-height-30"></div>
                 <div class="DestinyImg001">
-                  <img
-                    src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinyPortoGalinhasPq.png"
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinyPortoGalinhasPq.png"
                     width="1020" alt="" class="align-self-center">
                 </div>
                 <div
@@ -2345,9 +2317,8 @@
               <div class="position-relative">
                 <div class="DestinyMark001 md-position-inherit md-width-100 md-margin-0 md-height-30"></div>
                 <div class="DestinyImg001">
-                  <img
-                    src="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/DestinySerra.png"
-                    width="1020" alt="" class="align-self-center">
+                  <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/DestinySerra.png" width="1020" alt=""
+                    class="align-self-center">
                 </div>
                 <div
                   class="DestinyPrice md-padding-40 md-position-inherit d-flex flex-column lg-padding-left-60 lg-max-width-550">
